k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  selector:
    app: foo
  ports:
  - port: 5678
    targetPort: 5678
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  selector:
    app: bar
  ports:
  - port: 5678
    targetPort: 5678
    protocol: TCP
